--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+pgbouncer (1.8.1-2) unstable; urgency=low
+
+  * v1.8.1-2
+
+ -- Peter Eisentraut <peter@eisentraut.org>  Wed, 20 Dec 2017 00:00:00 +0000
 pgbouncer (1.8.1-1) unstable; urgency=low
 
   * v1.8.1
